Adiciona autor na classe e na activity

--- a/EquacaoSegundoGrau/app/src/main/res/values/strings.xml
+++ b/EquacaoSegundoGrau/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="calcular">Calcular</string>
     <string name="nao_existe">Não existe</string>
     <string name="e">e</string>
+    <string name="autor">Gustavo de Paula 1110482313003</string>
 
 </resources>
